updating index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
 </head>
 
-<body style="background-image: url(bg1.jpg);background-size: 100% 110%">
+<body>
 
   <div class="container">
     <div class="row">
